# cmake_tutorial

./: CMakeLists.txt  MathFunctions.cc  MathFunctions.h  README  main.c  main.cc
math/: CMakeLists.txt  MathFunctions.cc
